--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- deve combaciare con l'entry point -->
+    <script type="module" src="/src/main_entry_point.jsx"></script>
   </body>
 </html>
